--- a/index.html
+++ b/index.html
@@ -3,9 +3,38 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Start</title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<title>Microsoft - Cloud, Computers, Apps and Gaming</title>
 </head>
 <body>
+	<div class = "container">
+		<nav class="main-nav">
+			<img src = "img/logo.png" alt = "Microsoft" class="logo">
+
+			<ul class="main-menu">
+		        <li><a href="#">Microsoft 365</a></li>
+		        <li><a href="#">Teams</a></li>
+		        <li><a href="#">Windows</a></li>
+		        <li><a href="#">Surface</a></li>
+		        <li><a href="#">Xbox</a></li>
+		        <li><a href="#">Support</a></li>
+      		</ul>
+
+      		<ul class="side-menu">
+      			<li>
+      				<a href="#">
+      					<i class="fas fa-search"></i>
+      				</a>
+      			</li>
+      			<li>
+      				<a href="#">
+      					<i class="fas fa-shopping-cart"></i>
+      				</a>
+      			</li>
+      		</ul>
+		</nav>
+	</div>
 
 </body>
 </html>
