--- a/index.html
+++ b/index.html
@@ -34,7 +34,27 @@
       			</li>
       		</ul>
 		</nav>
+
+		
 	</div>
 
+	<header class="landing-show">
+		<h3>
+			Microsoft 365
+		</h3>
+		<p>
+			Turn your ideas into reality, stay safer online and off, and focus on what matters most with Microsoft 365 apps
+		</p>
+		<div class="landing-btn">
+			<a href="#" class="btn-one-person" class = "btn">
+				For one person
+			</a>
+			<a href="#" class="btn-six-person">
+				For upto six people <i class="fas fa-chevron-right"></i>
+			</a>
+		</div>
+		<!-- <img src="img/landing-photo.avif" alt="landing-show" class="landing-img"> -->
+	</header>
+	
 </body>
 </html>
