--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	<header class="landing-show">
 		<h3>
 			Microsoft 365
-		</h3>
+		</h>
 		<p>
 			Turn your ideas into reality, stay safer online and off, and focus on what matters most with Microsoft 365 apps
 		</p>
@@ -55,6 +55,63 @@
 		</div>
 		<!-- <img src="img/landing-photo.avif" alt="landing-show" class="landing-img"> -->
 	</header>
+
+	<section class="icon-links">
+		<div>
+		  <img src="img/win-logo.webp" alt="">
+		  <a href="#">Choose your Microsoft 365</a>
+		</div>
+		
+		<div>
+			<img src="img/surface.webp" alt="">
+			<a href="#">Explore Surface devices</a>
+		  </div>
+		<div>
+			<img src="img/Xbox.webp" alt="">
+			<a href="#">Buy Xbox games</a>
+		</div>
+		<div>
+			<img src="img/win-logo.webp" alt="">
+			<a href="#">Get Windows 11</a>
+		</div>
+			  
+		
+	</section>
+
+	<section class="cards">
+		<div>
+		  <img src="img/Surface-Laptop.webp" alt="">
+		  <h3>Surface Laptop 5</h3>
+		  <p>
+			Sophisticated style and multitasking speed powered by 12th Gen Intel Core, with Windows 11
+		  </p>
+		  <a href="#">Learn More <i class="fas fa-chevron-right"></i></a>
+		</div>
+		<div>
+		  <img src="img/Xbox-Series-S.webp" alt="" />
+		  <h3>Xbox Series S</h3>
+		  <p>
+			Next-gen performance in the smallest Xbox ever.
+		  </p>
+		  <a href="#">Shop Xbox Series S <i class="fas fa-chevron-right"></i></a>
+		</div>
+		<div>
+		  <img src="img/Xbox-Series-X.webp" alt="" />
+		  <h3>Xbox-Series X</h3>
+		  <p>
+			The fastest, most powerful Xbox ever.
+		  </p>
+		  <a href="#">Shop Xbox Series X<i class="fas fa-chevron-right"></i></a>
+		</div>
+		<div>
+		  <img src="img/Bing-AI.avif" alt="" />
+		  <h3>Announcing the next wave of AI innovtion</h3>
+		  <p>
+			The new Microsoft Bing and Edge will soon feature more visual search responses, chat history, and persistant chat within Edge. We're also adding actions to help people complete tasks.
+		  </p>
+		  <a href="#">Learn More about it<i class="fas fa-chevron-right"></i></a>
+		</div>
+	  </section>
 	
 </body>
 </html>
