--- a/index.html
+++ b/index.html
@@ -111,7 +111,55 @@
 		  </p>
 		  <a href="#">Learn More about it<i class="fas fa-chevron-right"></i></a>
 		</div>
-	  </section>
-	
+	</section>
+
+	<section class="xbox">
+		<div class="content">
+		  	<h2>Xbox Game Pass Ultimate</h2>
+		  	<p>Xbox Live Gold and hundreds of high-quality console and PC games. Play together with friends and discover your next favourite game.</p>
+			<a href="#" class="btn">
+			  Join Now 
+			</a>
+		</div>
+	</section>
+
+	<div class="container">
+	  <h2>For Business</h2>
+	</div>
+
+	<section class="cards">
+		<div>
+		  <img src="img/Surface-for-business.avif" alt="">
+		  <h3>Surface For Business</h3>
+		  <p>
+			No matter what you do, there’s a Surface to help you do it.
+		  </p>
+		  <a href="#">Shop now<i class="fas fa-chevron-right"></i></a>
+		</div>
+		<div>
+		  <img src="img/Teams.webp" alt="" />
+		  <h3>Get Microsoft Teams for free</h3>
+		  <p>
+			Online meetings, chat and shared cloud storage – all in one place.
+		  </p>
+		  <a href="#">Sign up for free<i class="fas fa-chevron-right"></i></a>
+		</div>
+		<div>
+		  <img src="img/Windows-11-Business.jpeg" alt="" />
+		  <h3>Windows 11 for business</h3>
+		  <p>
+			Designed for hybrid work. Powerful for employees. Consistent for IT. Secure for all.
+		  </p>
+		  <a href="#">Learn more<i class="fas fa-chevron-right"></i></a>
+		</div>
+		<div>
+		  <img src="img/Microsoft-365-For-free.webp" alt="" />
+		  <h3>Try Microsoft 365 for free</h3>
+		  <p>
+			Get Microsoft Teams, secure cloud storage and premium apps across devices with a free one-month Microsoft 365 Business Standard trial.
+		  </p>
+		  <a href="#">Start your free trial<i class="fas fa-chevron-right"></i></a>
+		</div>
+	</section>
 </body>
 </html>
