--- a/index.html
+++ b/index.html
@@ -161,5 +161,100 @@
 		  <a href="#">Start your free trial<i class="fas fa-chevron-right"></i></a>
 		</div>
 	</section>
+
+	<section class="follow">
+        <p>Follow Microsoft</p>
+        <a href="https://facebook.com">
+          <img src="img/Facebook 2x.avif" alt="Facebook">
+        </a>
+        <a href="https://twitter.com">
+          <img src="img/Twitter 2x.webp" alt="Twitter">
+        </a>
+        <a href="https://youtube.com">
+          <img src="img/YouTube 2x.webp" alt="youtube">
+        </a>
+    </section>
+
+	<section class="links">
+        <div class="links-inner">
+          <ul>
+            <li><h3>What's New</h3></li>
+            <li><a href="#">Microsoft 365</a></li>
+            <li><a href="#">games</a></li>
+            <li><a href="#">Surface Pro 9</a></li>
+            <li><a href="#">Surface Laptop 5</a></li>
+            <li><a href="#">Surface Laptop studio</a></li>
+			<li><a href="#">Surface Laptop Go 2</a></li>
+			<li><a href="#">Windows 11 Apps</a></li>
+          </ul>
+          <ul>
+            <li><h3>Microsoft Store</h3></li>
+            <li><a href="#">Account Profile</a></li>
+            <li><a href="#">Download Center</a></li>
+            <li><a href="#">Microsoft Store support</a></li>
+            <li><a href="#">Returns</a></li>
+            <li><a href="#">Order tracking</a></li>
+          </ul>
+          <ul>
+            <li><h3>Education</h3></li>
+            <li><a href="#">Microsfot in Education</a></li>
+			<li><a href="#">Devices For Education</a></li>
+			<li><a href="#">Microsfot Teams For Education</a></li>
+            <li><a href="#">Microsoft 365 Education</a></li>
+            <li><a href="#">Office Education</a></li>
+            <li><a href="#">Educator training and development</a></li>
+			<li><a href="#">Deals for students and parents</a></li>
+            <li><a href="#">Azure for students</a></li>
+          </ul>
+          <ul>
+            <li><h3>Business</h3></li>
+            <li><a href="#">Microsoft Cloud</a></li>
+            <li><a href="#">Microsoft Security</a></li>
+            <li><a href="#">Azure</a></li>
+            <li><a href="#">Dynamics 365</a></li>
+            <li><a href="#">Microsoft 365</a></li>
+			<li><a href="#">Microsoft Advertising</a></li>
+			<li><a href="#">Microsoft Industry</a></li>
+			<li><a href="#">Microsoft Teams</a></li>
+          </ul>
+          <ul>
+            <li><h3>Developer & IT</h3></li>
+            <li><a href="#">Developer Center</a></li>
+            <li><a href="#">Documentation</a></li>
+            <li><a href="#">Microsoft Learn</a></li>
+            <li><a href="#">Microsoft Tech Community</a></li>
+            <li><a href="#">Azure Marketplace</a></li>
+			<li><a href="#">AppSource</a></li>
+			<li><a href="#">Microsoft Power Platform</a></li>
+			<li><a href="#">Visual Studio</a></li>
+          </ul>
+          <ul>
+            <li><h3>Company</h3></li>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">About Microsoft</a></li>
+            <li><a href="#">Company news</a></li>
+            <li><a href="#">Privacy at Microsoft</a></li>
+            <li><a href="#">Inverstors</a></li>
+			<li><a href="#">Security</a></li>
+			<li><a href="#">Sustainability</a></li>
+          </ul>
+        </div>
+      </section>
+
+	  <footer class="footer">
+        <div class="footer-inner">
+          <div><i class="fas fa-globe fa-2x"></i> English (United States)</div>
+          <ul>
+            <li><a href="#">Sitemap</a></li>
+					<li><a href="#">Contact Microsoft</a></li>
+					<li><a href="#">Privacy & cookies</a></li>
+					<li><a href="#">Terms of use</a></li>
+					<li><a href="#">Trademarks</a></li>
+					<li><a href="#">Safety & eco</a></li>
+					<li><a href="#">About our ads</a></li>
+					<li><a href="#">&copy; Microsoft 2020</a></li>
+          </ul>
+        </div>
+      </footer>
 </body>
 </html>
